# docker_django_template

./: .dockerignore  .gitignore  Dockerfi  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  startup.sh
cfehome/: settings.py  wsgi.py
