[tool.poetry]
name = "docker_django_template"
version = "0.1.0"
description = ""
authors = ["Sean <lthon0225@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "1.11.17"
gunicorn = "^20.0.4"
python-dotenv = "0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
